--- a/PhotoSync/PopupPanel.xib
+++ b/PhotoSync/PopupPanel.xib
@@ -54,7 +54,6 @@
 							<string key="NSFrame">{{107, 73}, {75, 32}}</string>
 							<reference key="NSSuperview" ref="653229801"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="586891988">
@@ -101,11 +100,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBActionConnection" key="connection">
-						<string key="label">closePanel</string>
+						<string key="label">closePanel:</string>
 						<reference key="source" ref="1001"/>
 						<reference key="destination" ref="807002933"/>
 					</object>
-					<int key="connectionID">20</int>
+					<int key="connectionID">21</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -113,7 +112,7 @@
 						<reference key="source" ref="240584267"/>
 						<reference key="destination" ref="1001"/>
 					</object>
-					<int key="connectionID">6</int>
+					<int key="connectionID">22</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -237,7 +236,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">20</int>
+			<int key="maxID">22</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -260,6 +259,20 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">PHSPanelController</string>
 					<string key="superclassName">NSWindowController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="closePanel:">id</string>
+						<string key="openPanel:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="closePanel:">
+							<string key="name">closePanel:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="openPanel:">
+							<string key="name">openPanel:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/PHSPanelController.h</string>
