Rounding corners of the popover window.

--- a/PhotoSync/PopupPanel.xib
+++ b/PhotoSync/PopupPanel.xib
@@ -48,6 +48,7 @@
 					<string key="NSFrameSize">{400, 520}</string>
 					<reference key="NSSuperview"/>
 					<reference key="NSWindow"/>
+					<reference key="NSNextKeyView"/>
 					<string key="NSReuseIdentifierKey">_NS:21</string>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1440, 878}}</string>
